VNext
-------------
- [PATCH] Update YubiKit version to 2.3.0 (#1744)

Version 4.7.3
-------------
- [PATCH] Update common @14.0.1

Version 4.7.2
-------------
- [PATCH] Update common @14.0.0

Version 4.7.1
-------------
- [MAJOR] Consolidate Storage Supplier (breaking change introduced in common) #1729
- [MINOR] Replacing SHA-1 used in broker validation with SHA-512 (#1732)
- [MINOR] Removing thumbprint check from PkeyAuthChallenge (#1733)
- [PATCH] Update common @13.0.1
- [PATCH] Version 4.7.0 was built with common which had lint errors, updated to consume common after resolving errors

Version 4.6.0
-------------
- [MINOR] Remove dependency from common's storagehelper #1725
- [MINOR] Mapping ECDSA to EC in ClientCertRequest's keyTypes array (#1726)
- [PATCH] Update common @12.0.0

Version 4.5.0
-------------
- [PATCH] Update common @11.0.0
- [MINOR] Bumping YubiKit Versions to 2.2.0 (#1719)

Version 4.4.1
-------------
- [PATCH] V4.4.0 was incorrectly built with RC versions, need to increment to V4.4.1
- [PATCH] Update common@10.1.1

Version 4.3.0
-------------
- [PATCH] Update common@10.0.0

Version 4.2.4
-------------
- [PATCH] Update common@9.1.0

Version 4.2.3
-------------
- [PATCH] Update common@9.0.0

Version 4.2.2
-------------
- [PATCH] Update common@8.0.2

Version 4.2.1
-------------
- [PATCH] Update common@8.0.0

Version 4.2.0
-------------
- [PATCH] Update common@7.0.1
- [PATCH] Update androidx appcompat version from 1.0.2 -> 1.1.0 (#1691)
- [MINOR] Added keyboard flag to configChanges in Manifest for YubiKey compatibility. (#1699)

Version 4.1.0
-------------
- [PATCH] Update common@4.2.0
- [PATCH] Update gson version to 2.8.9 (#1680)
- [MINOR] Remove PKeyAuth support from ADAL (#1685)

Version 4.0.2
-------------
- [PATCH] Update common@4.0.2

Version 4.0.1
-------------
- [MINOR] Migrate BaseController to common4j (#1636)
- [MAJOR] Migrate Token Caches to Common4j (#1633)
- [MINOR] Adapt to migration of shared preferences. (#1624)